--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,11 +12,11 @@ env:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: [windows-latest, ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: cargo build --verbose
+        run: cargo build release --verbose
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test release --verbose
