--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [x86_64-pc-windows-msvc]
+        target: [x86_64-pc-windows-gnu]
     steps:
       - uses: actions/checkout@master
       - name: Compile and release
