dll compilation support

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --release --verbose
-      - name: Run tests
-        run: cargo test --release --verbose
+      - name: Build binary
+        run: cargo build --release --verbose --bin path_server
+      - name: Build library
+        run: cargo build --release --verbose --lib
