--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "path_server"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "path_server"
+path = "src/main.rs"
+
+[lib]
+name = "path_server_lib"
+path = "src/lib.rs"
+crate-type = ["cdylib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
