--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           args: --target x86_64-pc-windows-gnu --release --bin path_server
       - uses: vimtor/action-zip@v1
         with:
-          files target/release/path_server.exe
+          files: target/release/path_server.exe
           dest: release.zip
       - uses: actions/upload-artifact@v3
         with:
