--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@
 name: Release
 
 on:
-  release:
-    types: [created]
+  push:
+    tags: [ '[0-9]+.[0-9]+' ]
 
 jobs:
   release:
@@ -20,20 +20,29 @@ jobs:
           use-cross: true
           command: build
           args: --target x86_64-pc-windows-gnu --release --bins --lib
-      - name: Show dirs
-        run: |
-          ls -laR
       - uses: vimtor/action-zip@v1
         with:
           files: target/x86_64-pc-windows-gnu/release/path_server.exe www/
           dest: path_server.zip
       - uses: vimtor/action-zip@v1
         with:
-          files: target/x86_64-pc-windows-gnu/release/path_server_lib_dll.exe www/ui.html
-          dest: path_server.zip
-      - uses: actions/upload-artifact@v3
+          files: target/x86_64-pc-windows-gnu/release/path_server_lib.dll www/ui.html
+          dest: path_server_lib.zip
+      
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: path_server ${{ github.ref }}
+          draft: false
+          prerelease: false
+        
+      - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
         with:
-          name: Release
-          path: path_server.zip
+          upload_url: ${{ steps.create_release.outputs.upload_url }}        
+          asset_path: ./path_server.zip
+          asset_name: path_server.zip
+          asset_content_type: application/zip
