--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,10 +30,11 @@ jobs:
           dest: path_server_lib.zip
 
       - name: Upload Release Asset
-        uses: softprops/action-gh-release@v1
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
         with:
-          tag_name: ${{ github.ref.replace('refs/tags/', '') }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          files: |
-            ./path_server.zip
-            ./path_server_lib.zip
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./path_server_lib.zip
+          asset_name: path_server_lib.zip
+          asset_content_type: application/zip
