--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
       - uses: vimtor/action-zip@v1
         with:
           files: target/x86_64-pc-windows-gnu/release/path_server.exe www/
+          recursive: false
           dest: path_server.zip
       
       - uses: vimtor/action-zip@v1
